test_suite/alan-2022-examples/failing/002550_mutation.alan
source T begin qh := array integer end
